update about me section

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             </div>
         </header> -->
         <!-- Home section -->
-        <div class="flex flex-col overflow-hidden lg:flex-row mx-20 justify-center lg:justify-between items-center min-h-screen main-content-section">
+        <div class="flex flex-col overflow-hidden lg:flex-row mx-1 lg:mx-10 justify-center lg:justify-between items-center min-h-screen main-content-section">
             <div class="text-white order-[2] lg:order-[1] items-center lg:items-start flex flex-col">
-                <h1 class="text-xs order-[2] lg:order-[1] lg:text-base xl:text-2xl animate-left-b">Hi<span class="text-teal-500">,</span> My <span class="text-teal-500">name</span> is</h1>
+                <h1 class="order-[2] lg:order-[1] lg:text-base xl:text-2xl animate-left-b">Hi<span class="text-teal-500">,</span> My <span class="text-teal-500">name</span> is</h1>
                 <div id="clickable-name" class="animate-left-b order-[3] lg:order-[2]">
-                    <h1 class="text-xl pl-[10vw] lg:pl-0 lg:text-4xl xl:text-7xl group items-end font-bold mb-0 lg:mb-2 xl:mb-4 inline-flex transition-all duration-200 ease-out active:scale-95 cursor-pointer">
+                    <h1 class="pl-0 text-4xl xl:text-7xl group items-end font-bold mb-0 lg:mb-2 xl:mb-4 inline-flex transition-all duration-200 ease-out active:scale-95 cursor-pointer">
                         Talisic, 
                         <span class="text-teal-500">Kevin Rey&nbsp;</span> S.
-                        <div class="flex transition-all duration-300 ease-out
+                        <div class="hidden lg:flex transition-all duration-300 ease-out
                                     translate-x-0 opacity-0
                                     group-hover:translate-x-4 group-hover:opacity-100">
                             <!-- Triangle pointer -->
@@ -48,20 +48,20 @@
                         </div>
                     </h1>
                 </div>
-                <p class="text-xs order-[4] lg:order-[3] lg:text-base xl:text-2xl animate-left-b">A Filipino Web Developer/UI Designer/Digital Artist.</p>
-                <div class="flex flex-row order-[5] lg:order-[4] lg:mt-3 mt-0 xl:mt-5 h-6 xl:h-10 animate-left-b gap-1 xl:gap-2">
-                    <div class="w-12 lg:w-24 xl:w-28">
-                        <button class="p-1 xl:p-2 bg-teal-500 text-[6px] lg:text-xs xl:text-base w-max h-max border-b xl:border-b-2 active:border-b-0 active:border-l-0 transition-all duration-200 ease-out hover:bg-white hover:text-teal-500 border-l-2 xl:border-l-4 rounded-md border-teal-800 text-white">Download CV</button>
+                <p class="order-[4] lg:order-[3] text-sm lg:text-base xl:text-2xl animate-left-b">A Filipino Web Developer/UI Designer/Digital Artist.</p>
+                <div class="flex flex-row order-[5] lg:order-[4] lg:mt-3 mt-2 xl:mt-5 h-6 xl:h-10 animate-left-b gap-1 xl:gap-2">
+                    <div class="w-24 xl:w-28">
+                        <button class="p-1 xl:p-2 bg-teal-500 text-xs xl:text-base w-max h-max border-b xl:border-b-2 active:border-b-0 active:border-l-0 transition-all duration-200 ease-out hover:bg-white hover:text-teal-500 border-l-2 xl:border-l-4 rounded-md border-teal-800 text-white">Download CV</button>
                     </div>
                     <div>
-                        <button class="p-1 xl:p-2 bg-gray-600 text-[6px] lg:text-xs xl:text-base h-max border-b xl:border-b-2 active:border-b-0 active:border-l-0 transition-all duration-200 ease-out hover:bg-white hover:text-gray-500 border-l-2 xl:border-l-4 rounded-md border-gray-400 text-white">Download Resume</button>
+                        <button class="p-1 xl:p-2 bg-gray-600 text-xs xl:text-base h-max border-b xl:border-b-2 active:border-b-0 active:border-l-0 transition-all duration-200 ease-out hover:bg-white hover:text-gray-500 border-l-2 xl:border-l-4 rounded-md border-gray-400 text-white">Download Resume</button>
                     </div>
                 </div>
                 <div class="flex flex-row w-full justify-center lg:justify-start order-[1] lg:order-[5] gap-1 mt-4 mb-4 lg:mb-0 lg:mt-8 xl:mt-12 flex-row">
                     <div class="inline-flex w-max h-6 lg:h-8 xl:h-10 items-center">
                         <a href="https://x.com/PhKito" target="_blank" class="w-max peer">
                         <img src="img/home/x-logo.png"  
-                            class="p-0.5 lg:p-1 animate-left-b rounded-full bg-teal-600 hover:bg-teal-400 xl:w-8 xl:h-8 lg:w-6 lg:h-6 w-4 h-4">
+                            class="p-0.5 lg:p-1 animate-left-b rounded-full bg-teal-600 hover:bg-teal-400 xl:w-8 xl:h-8 lg:w-6 lg:h-6 w-8 h-8">
                         </a>
                         <span class="relative w-0 flex transition-all duration-300 ease-out
                                     translate-y-0 -translate-x-3 opacity-0 pointer-events-none
@@ -77,7 +77,7 @@
                     <div class="inline-flex w-max h-6 lg:h-8 xl:h-10 items-center">
                         <a href="mailto:kevstalisic@gmail.com?subject=Hiring Inquiry&body=Good day! Kevs, I would like to hire you" class="w-max peer">
                         <img src="img/home/gmail.png"  
-                            class="p-0.5 lg:p-1 animate-left-b rounded-full bg-teal-600 hover:bg-teal-400 xl:w-8 xl:h-8 lg:w-6 lg:h-6 w-4 h-4">
+                            class="p-0.5 lg:p-1 animate-left-b rounded-full bg-teal-600 hover:bg-teal-400 xl:w-8 xl:h-8 lg:w-6 lg:h-6 w-8 h-8">
                         </a>
                         <span class="relative w-0 flex transition-all duration-300 ease-out
                                     translate-y-0 -translate-x-3 opacity-0 pointer-events-none
@@ -93,7 +93,7 @@
                     <div class="inline-flex w-max h-6 lg:h-8 xl:h-10 items-center">
                         <a href="https://github.com/NamelessKevs" target="_blank" class="w-max peer">
                         <img src="img/home/github.png"  
-                            class="p-0.5 lg:p-1 animate-left-b rounded-full bg-teal-600 hover:bg-teal-400 xl:w-8 xl:h-8 lg:w-6 lg:h-6 w-4 h-4">
+                            class="p-0.5 lg:p-1 animate-left-b rounded-full bg-teal-600 hover:bg-teal-400 xl:w-8 xl:h-8 lg:w-6 lg:h-6 w-8 h-8">
                         </a>
                         <span class="relative w-0 flex transition-all duration-300 ease-out
                                     translate-y-0 -translate-x-3 opacity-0 pointer-events-none
@@ -109,7 +109,7 @@
                     <div class="inline-flex w-max h-6 lg:h-8 xl:h-10 items-center">
                         <a href="https://www.facebook.com/kevs.talisic" target="_blank" class="w-max peer">
                         <img src="img/home/fb.png"  
-                            class="p-0.5 lg:p-1 animate-left-b rounded-full bg-teal-600 hover:bg-teal-400 xl:w-8 xl:h-8 lg:w-6 lg:h-6 w-4 h-4">
+                            class="p-0.5 lg:p-1 animate-left-b rounded-full bg-teal-600 hover:bg-teal-400 xl:w-8 xl:h-8 lg:w-6 lg:h-6 w-8 h-8">
                         </a>
                         <span class="relative w-0 flex transition-all duration-300 ease-out
                                     translate-y-0 -translate-x-3 opacity-0 pointer-events-none
@@ -125,7 +125,7 @@
                     <div class="inline-flex w-max h-6 lg:h-8 xl:h-10 items-center">
                         <a href="https://www.linkedin.com/in/kevstalisic/" target="_blank" class="w-max peer">
                         <img src="img/home/linkedin.png"  
-                            class="p-0.5 lg:p-1 animate-left-b rounded-full bg-teal-600 hover:bg-teal-400 xl:w-8 xl:h-8 lg:w-6 lg:h-6 w-4 h-4">
+                            class="p-0.5 lg:p-1 animate-left-b rounded-full bg-teal-600 hover:bg-teal-400 xl:w-8 xl:h-8 lg:w-6 lg:h-6 w-8 h-8">
                         </a>
                         <span class="relative w-0 flex transition-all duration-300 ease-out
                                     translate-y-0 -translate-x-3 opacity-0 pointer-events-none
@@ -143,7 +143,7 @@
             <div class="animate-popin order-[1] mr-[2%] lg:order-[2] text-white">
                 <video 
                     id="waving-video" 
-                    class="waving-video xl:w-60 w-32 h-32 md:w-36 md:h-36 lg:w-72 lg:h-72 xl:h-60" 
+                    class="waving-video xl:w-60 w-60 h-60 md:w-36 md:h-36 lg:w-72 lg:h-72 xl:h-60" 
                     muted
                     playsinline
                     preload="auto"
@@ -155,7 +155,7 @@
         </div>
 
         <!-- About Me Section -->
-        <div class="bg-white/75 px-20">
+        <div class="bg-white/75 px-1 lg:px-10">
              <div class="flex items-center min-h-screen">
                 <div class="main-content-section w-full flex flex-row justify-between items-center">
                     <div>
@@ -167,8 +167,8 @@
                             Hi, You can call me Kevs, a Web Developer with 1 year of experience building web systems. I specialize in Laravel, Vue.js, React, and front-end development, with a creative background in digital art and animation. I enjoy collaborating with teams and create comprehensive user manuals and documentation to deliver efficient solutions while exploring creative projects.
                         </p>
                     </div>
-                    <div class="h-72 w-72 animate-right-c rounded-full overflow-hidden bg-gray-800">
-                        <img src="img/aboutme/aboutme1.jpg" alt="About me" class="aboutme active:animate-spin" >
+                    <div class="h-72 w-72 animate-right-c rounded-full overflow-hidden bg-gray-800 auto-slideshow relative">
+                        <!-- Images will be automatically inserted by JavaScript -->
                     </div>
                 </div>
             </div>
@@ -331,14 +331,16 @@
                     </div>
                 </div>
             </div>
-            <div class="py-5 main-content-section">
-                <h2 class="text-4xl w-full animate-down text-center text-teal-700 px-5 font-bold">Experience</h2>
-                <div class="flex flex-row animate-down gap-5 w-full">
-                    <section class="relative pl-0.5 min-h-screen">
+            <div class="py-5 min-h-screen">
+                <div class="main-content-section">
+                    <h2 class="text-4xl w-full animate-down text-center text-teal-700 px-5 font-bold">Experience</h2>
+                </div>
+                <div class="flex flex-row gap-5 w-full">
+                    <section class="relative main-content-section pl-0.5 min-h-screen">
                         <!-- Static border line -->
-                        <div class="absolute left-0 top-0 w-0.5 h-full bg-gray-300"></div>
+                        <div class="absolute animate-down left-0 top-0 w-0.5 h-full bg-gray-300"></div>
                         <!-- Moving indicator dot -->
-                        <div class="sticky top-[20%] w-1 h-[30vh] transform -translate-x-3/4 translate-y-1 z-10">
+                        <div class="sticky animate-down top-[20%] w-1 h-[30vh] transform -translate-x-3/4 translate-y-1 z-10">
                             <div class="w-full h-full flex items-center rgb-bg rounded-full">
                                 <div class="w-4 h-4 rounded-full bg-teal-500 z-10 relative -mx-1.5 left-[1px]"></div>
                             </div>
@@ -347,20 +349,20 @@
                     </section>
                     <section class="py-[2%]">
                         <div class="h-full flex flex-col w-full justify-between">
-                            <div>
-                                <h1 class="text-2xl text-teal-900">Internship</h1>
-                                <h1 class="text-lg text-gray-800"><a href="https://www.shinkozan.com/">Shinkozan Corporation</a></h1>
-                                <p class="text-gray-700">Data Entry Intern: January 2020 - February 2020</p>
+                            <div class="main-content-section">
+                                <h1 class="text-2xl animate-down text-teal-900">Internship</h1>
+                                <h1 class="text-lg animate-down text-gray-800"><a href="https://www.shinkozan.com/">Shinkozan Corporation</a></h1>
+                                <p class="text-gray-700 animate-down">Data Entry Intern: January 2020 - February 2020</p>
                                 <ul class="list-disc list-outside ml-6 mt-2 text-gray-600">
                                     <li>Migrated and converted legacy Excel databases to updated file formats</li>
                                     <li>Organized and maintained office paper documentation</li>
                                     <li>Provided administrative support and assisted with various office tasks</li>
                                 </ul>
                             </div>
-                            <div>
-                                <h1 class="text-lg text-gray-800"><a href="https://genmarianoalvarez.gov.ph/">GMA Municipal Hall - ICT</a></h1>
-                                <p class="text-gray-700">IT Intern: August 2023 - September 2023</p>
-                                <ul class="list-disc list-outside ml-6 mt-2 text-gray-600">
+                            <div class="main-content-section">
+                                <h1 class="text-lg animate-down text-gray-800"><a href="https://genmarianoalvarez.gov.ph/">GMA Municipal Hall - ICT</a></h1>
+                                <p class="text-gray-700 animate-down">IT Intern: August 2023 - September 2023</p>
+                                <ul class="list-disc animate-down list-outside ml-6 mt-2 text-gray-600">
                                     <li>Conducted testing and debugging for municipal web system development project</li>
                                     <li>Developed web applications using HTML, CSS, JavaScript, PHP, and XAMPP server environment</li>
                                     <li>Performed computer maintenance, troubleshooting, and system optimization for municipal workstations</li>
@@ -368,11 +370,11 @@
                                     <li>Provided technical support and assisted with various IT infrastructure tasks</li>
                                 </ul>
                             </div>
-                            <div>
-                                <h1 class="text-2xl text-teal-900">Full-time Employment</h1>
-                                <h1 class="text-lg text-gray-800"><a href="https://www.betafoam.ph/">Betafoam Corporation</a></h1>
-                                <p class="text-gray-700">IT Programmer: August 2024 - Current</p>
-                                <ul class="list-disc list-outside ml-6 mt-2 text-gray-600">
+                            <div class="main-content-section">
+                                <h1 class="text-2xl animate-down text-teal-900">Full-time Employment</h1>
+                                <h1 class="text-lg animate-down text-gray-800"><a href="https://www.betafoam.ph/">Betafoam Corporation</a></h1>
+                                <p class="text-gray-700 animate-down">IT Programmer: August 2024 - Current</p>
+                                <ul class="list-disc animate-down list-outside ml-6 mt-2 text-gray-600">
                                     <li>Develop and maintain web applications using Laravel, Livewire, Vue.js, Inertia.js, and Tailwind CSS with SQL Server database</li>
                                     <li>Implement responsive front-end user interfaces and optimize user experience</li>
                                     <li>Monitor database performance and manage automated backup systems</li>
@@ -385,7 +387,7 @@
                 </div>
             </div>
         </div>
-        <div id="home" class="px-20">
+        <div class="px-1 lg:px-10">
              <div class="flex flex-col justify-evenly min-h-screen h-auto gap-10 py-10">
                 <div class="flex w-full justify-center main-content-section">
                     <h1 class="text-4xl text-teal-500 text-center animate-up">Projects</h1>
@@ -401,8 +403,8 @@
                 </div>
                 <div class="main-content-section flex w-full items-center justify-between">
                     <div>
-                        <h1 class="text-4xl text-white text-center animate-up">Dental Clinic System</h1>
-                        <button onclick="window.open('demo1.html', '_blank')" class="p-1 xl:p-2 bg-white text-[6px] lg:text-xs xl:text-base h-max border-b xl:border-b-2 active:border-b-0 active:border-l-0 transition-all duration-200 ease-out border-l-2 xl:border-l-4 rounded-md border-teal-500 text-teal-800">Try Demo</button>
+                        <h1 class="text-4xl text-white text-center animate-up">Quality Assurance System</h1>
+                        <button onclick="window.open('demo2.html', '_blank')" class="p-1 xl:p-2 bg-white text-[6px] lg:text-xs xl:text-base h-max border-b xl:border-b-2 active:border-b-0 active:border-l-0 transition-all duration-200 ease-out border-l-2 xl:border-l-4 rounded-md border-teal-500 text-teal-800">Try Demo</button>
                     </div>
                     <div class="animate-up active:w-20 hover:cursor-pointer">
                         <img src="img/work/landing.png" class="h-60" >
