update pics and design

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                         <button onclick="window.open('demo1.html', '_blank')" class="p-1 xl:p-2 bg-white text-[6px] lg:text-xs xl:text-base h-max border-b xl:border-b-2 active:border-b-0 active:border-l-0 transition-all duration-200 ease-out border-l-2 xl:border-l-4 rounded-md border-teal-500 text-teal-800">Try Demo</button>
                     </div>
                     <div class="animate-up active:w-20 hover:cursor-pointer">
-                        <img src="img/work/landing.png" class="h-60" >
+                        <img src="img/work/landing.png" class="w-[500px] h-60" >
                     </div>
                 </div>
                 <div class="main-content-section flex w-full items-center justify-between">
@@ -407,7 +407,7 @@
                         <button onclick="window.open('demo2.html', '_blank')" class="p-1 xl:p-2 bg-white text-[6px] lg:text-xs xl:text-base h-max border-b xl:border-b-2 active:border-b-0 active:border-l-0 transition-all duration-200 ease-out border-l-2 xl:border-l-4 rounded-md border-teal-500 text-teal-800">Try Demo</button>
                     </div>
                     <div class="animate-up active:w-20 hover:cursor-pointer">
-                        <img src="img/work/landing.png" class="h-60" >
+                        <img src="img/work/QA Dashboard.png" class="w-[500px] h-60" >
                     </div>
                 </div>
                                 <div class="main-content-section flex w-full items-center justify-between">
@@ -416,7 +416,7 @@
                         <button onclick="window.open('demo1.html', '_blank')" class="p-1 xl:p-2 bg-white text-[6px] lg:text-xs xl:text-base h-max border-b xl:border-b-2 active:border-b-0 active:border-l-0 transition-all duration-200 ease-out border-l-2 xl:border-l-4 rounded-md border-teal-500 text-teal-800">Try Demo</button>
                     </div>
                     <div class="animate-up active:w-20 hover:cursor-pointer">
-                        <img src="img/work/landing.png" class="h-60" >
+                        <img src="img/work/landing.png" class="w-[500px] h-60" >
                     </div>
                 </div>
             </div>
