--- a/demo2.html
+++ b/demo2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dental Clinic System - Demo</title>
+        <title>Quality Assurance System - Demo</title>
     <link rel="icon" href="/img/titlepic.png" type="image/png">
     <style>
         * {
